Styling Issues: Left border and spacing of the issues items

--- a/css/main.css
+++ b/css/main.css
@@ -38,6 +38,7 @@
 .tab {
     display: flex;
     justify-content: center;
+    padding:15px;    
 }
 .tab-heading {
     font-size: 0.8em;
@@ -45,13 +46,20 @@
     text-align: center;
 }
 
+.item {
+    margin-bottom:40px;
+    border-left: 2px solid;
+}
 .item-heading {
     font-size: 0.8em;
+    padding:0px 10px;
 }
 
 .item-subheading {
     font-size: 0.8em;
+    padding:0px 10px;
 }
 .item-text {
     font-size: 0.8em;
+    padding:0px 10px;
 }
